5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4165/executions/1585_825.log
== TEST (2019-03-26 10:54:49) 
-- CODE:
raio = float(input( "insira o raio"))
from math import *
val = pi
area = val*(raio**2)
volume = 4/3 * val * (raio**3)
print(round( area,3))
print(round(voleme,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(voleme,3))
NameError: name 'voleme' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:55:03) 
-- CODE:
raio = float(input( "insira o raio"))
from math import *
val = pi
area = val*(raio**2)
volume = 4/3 * val * (raio**3)
print(round( area,3))
print(round(volume,3))
-- OUTPUT:
63.617
381.704
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:55:18) 
-- CODE:
raio = float(input( "insira o raio"))
from math import *
val = pi
area = val*(raio**2)
volume = 4/3 * val * (raio**3)
print(round( area,3))
print(round( volume,3))
-- EXECUTION TIME:
0.134912
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.704
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.076
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
